--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-node_modules/
-bower_components/
-npm-debug.log
-firebase-debug.log
+/node_modules
+/bower_components
+/npm-debug.log
+/firebase-debug.log
+/static
+/public
+.DS_Store
