--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
-  "name": "codeblock_website",
+  "name": "codeblock-website",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo No tests",
+    "build": "./node_modules/.bin/gulp build",
+    "watch": "./node_modules/.bin/gulp watch"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Abhinav Pobbati <apobbati@codeblock.io>",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-0": "*",
+    "firebase-tools": "^2.0.2",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-copy": "0.0.2",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-sass": "^2.1.0",
+    "gulp-uglify": "^1.5.1"
+  },
+  "dependencies": {
+    "breakpoint-sass": "^2.6.1",
+    "susy": "^2.2.6"
+  }
 }
